--- a/Home/index.html
+++ b/Home/index.html
@@ -9,6 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&amp;family=Roboto:wght@400;700&amp;display=swap"
         rel="stylesheet" />
+
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -48,8 +49,8 @@
             </i>
             <i class="fas fa-globe">
             </i>
-           <a href="userlogin.html"> <i class="fas fa-user">
-            </i></a>
+            <a href="userlogin.html"> <i class="fas fa-user">
+                </i></a>
             <i class="fas fa-shopping-cart">
             </i>
         </div>
@@ -112,51 +113,54 @@
     </div>
 
 
-    <div class="interior-box">
-        <img alt="Interior of a luxury store with marble counters and a sign that reads 'Kinn'" class="background-image"
-            height="800" src="https://storage.googleapis.com/a1aa/image/5djYPnjJEj6fpgt32ZsJfaXGH2dJpR3QkyQKYPpQBKY.jpg"
-            width="1200" />
-        <div class="cotent">
-            <h2>
-                LOS ANGELES
-            </h2>
-            <h1>
-                The
-                <i>
-                    Flagship
+    <div class="section-with-background">
+        <div class="interior-box">
+            <img alt="Interior of a luxury store with marble counters and a sign that reads 'Kinn'"
+                class="background-image" height="800"
+                src="https://storage.googleapis.com/a1aa/image/5djYPnjJEj6fpgt32ZsJfaXGH2dJpR3QkyQKYPpQBKY.jpg"
+                width="1200" />
+            <div class="content">
+                <h2>
+                    LOS ANGELES
+                </h2>
+                <h1>
+                    The
+                    <i>
+                        Flagship
+                    </i>
+                    Store
+                </h1>
+                <p>
+                    Welcome to the ultimate luxury experience.
+                    <br />
+                    Choose the perfect solid gold gifts in person.
+                </p>
+                <a class="shop-button" href="#">
+                    Shop in Store
+                </a>
+            </div>
+            <div class="notification-icon">
+                <i class="fas fa-user-circle">
                 </i>
-                Store
-            </h1>
-            <p>
-                Welcome to the ultimate luxury experience.
-                <br />
-                Choose the perfect solid gold gifts in person.
-            </p>
-            <a class="shop-button" href="#">
-                Shop in Store
-            </a>
+                <i class="fas fa-circle">
+                </i>
+            </div>
         </div>
-        <div class="notification-icon">
-            <i class="fas fa-user-circle">
-            </i>
-            <i class="fas fa-circle">
-            </i>
+
+
+        <div class="text-box">
+            <div class="tile">The Tennis Collection</div>
+            <a href="#" class="shp-link">SHOP THE COLLECTION</a>
+            <div class="quote">
+                “We believe jewelry should be something you <span style="font-style: normal; font-weight: bold;">never
+                    take
+                    off</span>. <br>A companion to your memory,<br> made to last a lifetime, <br>the kind you'll invest
+                in
+                and pass down.”
+            </div>
+            <div class="author">—Jennie Yoon, Founder</div>
         </div>
     </div>
-
-
-
-    <div class="text-box">
-        <div class="tile">The Tennis Collection</div>
-        <a href="#" class="shp-link">SHOP THE COLLECTION</a>
-        <div class="quote">
-            “We believe jewelry should be something you <span style="font-style: normal; font-weight: bold;">never take
-                off</span>. <br>A companion to your memory,<br> made to last a lifetime, <br>the kind you'll invest in
-            and pass down.”
-        </div>
-        <div class="author">—Jennie Yoon, Founder</div>
-    </div>
-
 
     <div class="name-head">
         <h1>The Nameplate Collection</h1>
