--- a/Home/index.html
+++ b/Home/index.html
@@ -149,8 +149,8 @@
 
 
         <div class="text-box">
-            <div class="tile">The Tennis Collection</div>
-            <a href="#" class="shp-link">SHOP THE COLLECTION</a>
+            <div class="tile" style="text-align: center;">The Tennis Collection</div>
+            <a href="#" class="shp-link" style="text-align: center;">SHOP THE COLLECTION</a>
             <div class="quote">
                 “We believe jewelry should be something you <span style="font-style: normal; font-weight: bold;">never
                     take
