--- a/Pendents/Pendent.html
+++ b/Pendents/Pendent.html
@@ -32,10 +32,10 @@
             <a href="../Pendents/Pendent.html">
                 CHARMS &amp; PENDANTS
             </a>
-            <a href="../Vow/vow.html">
+            <a href="#">
                 VOW
             </a>
-            <a href="../About/about.html">
+            <a href="#">
                 ABOUT
             </a>
         </div>
