--- a/User-login/userlogin.html
+++ b/User-login/userlogin.html
@@ -28,10 +28,10 @@
             <a href="../Pendents/Pendent.html">
                 CHARMS &amp; PENDANTS
             </a>
-            <a href="../Vow/vow.html">
+            <a href="#">
                 VOW
             </a>
-            <a href="../About/about.html">
+            <a href="#">
                 ABOUT
             </a>
         </div>
